add route for review flashcard If the revision doesn't exist, create a nw one by default
